# InsurancePremiumCategoryPredictor

./: .gitignore  README.md  frontend.py  main.py  ml_model.ipynb  pipeline.pkl  pyproject.toml
config/: city_tier.py
frontend/: frontend.py
model/: ml_model.ipynb  predict.py
schema/: prediction_response.py  user_input.py
